# llm-rule-articulation

./: README.md  pyproject.toml
llm-faithfulness/data/: test_pile10k.json  training_pile10k.json
llm-faithfulness/experiments/alphabet_13_random_assignment_-0.5_o4-mini/: config.json  trial_0.json  trial_1.json  trial_2.json  trial_3.json
llm-faithfulness/experiments/alphabet_13_random_assignment_-1.0_o4-mini/: config.json  trial_0.json  trial_1.json  trial_2.json  trial_3.json
llm-faithfulness/experiments/alphabet_13_random_assignment_0.0_o4-mini/: config.json  trial_0.json  trial_1.json  trial_2.json  trial_3.json
llm-faithfulness/experiments/alphabet_13_random_assignment_1.0_-1.0_-0.7/: config.json  trial_0.json  trial_1.json  trial_2.json  trial_3.json  trial_4.json  trial_5.json  trial_6.json  trial_7.json
llm-faithfulness/experiments/alphabet_13_random_assignment_1.0_-1.0_0.0/: config.json  trial_0.json  trial_1.json  trial_2.json  trial_3.json  trial_4.json  trial_5.json  trial_6.json  trial_7.json
llm-faithfulness/experiments/alphabet_13_random_assignment_1.0_-1.0_0.7/: config.json  trial_0.json  trial_1.json  trial_2.json  trial_3.json  trial_4.json  trial_5.json  trial_6.json  trial_7.json
llm-faithfulness/experiments/alphabet_13_random_assignment_1.0_-5.0_0.0/: config.json  (+8 more)
llm-faithfulness/llm_faithfulness/: strings.py  utils.py
llm-faithfulness/notebooks/: alphabet_experiments.ipynb  classify_and_articulate.ipynb  counterfactual_test.ipynb  generate_figures.ipynb  int64_experiments.ipynb  load_data.ipynb  pile_10k_experiments.ipynb
(+633 files in other folders)
